--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,17 @@ spring.http.encoding.enabled=true
 server.tomcat.uri-encoding=UTF-8
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mine?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://localhost:3306/erp_local?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
 spring.datasource.password=root
 
-mybatis.mapper-locations=classpath:mybatis/mapper/*Mapper.xml
+mybatis-plus.type-aliases-package=com.example.sopservice.entity
+mybatis-plus.mapper-locations=classpath:mapper/*.xml
+mybatis-plus.global-config.db-config.id-type=auto
+
+mybatis-plus.global-config.db-config.logic-not-delete-value=0
+mybatis-plus.global-config.db-config.logic-delete-value=1
+
+
+
+
